--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\Diplomarbeit\Hauptprogramm\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  10/18/2019
+Project File Date:  10/29/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
@@ -30,13 +30,15 @@ Build target 'ProjectCube'
 compiling main.c...
 ../Src/main.c(168): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			velocity[i] = (3.3*velocityadc[i])/4096 ;
-../Src/main.c(198): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(169): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			steering[i] =	(3.3*steeringadc[i])/4096 ;
+../Src/main.c(203): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=20692 RO-data=560 RW-data=460 ZI-data=151308  
+Program Size: Code=20768 RO-data=560 RW-data=460 ZI-data=191308  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
