--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -26,67 +26,27 @@ Project File Date:  11/05/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
-Rebuild target 'ProjectCube'
-assembling startup_stm32f767xx.s...
-compiling fatfs.c...
-compiling usbd_desc.c...
-compiling user_diskio.c...
-compiling usbd_cdc_if.c...
-compiling usb_device.c...
-compiling usbd_conf.c...
-compiling fatfs_sd.c...
-..\Src\fatfs_sd.c(5): error:  #5: cannot open source input file "stm32f1xx_hal.h": No such file or directory
-  #include "stm32f1xx_hal.h"
-..\Src\fatfs_sd.c: 0 warnings, 1 error
+Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(180): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(109): warning:  #940-D: missing return statement at end of non-void function "bufsize" 
+  }
+../Src/main.c(102): warning:  #177-D: variable "u"  was declared but never referenced
+  	int u=0 ;
+../Src/main.c(206): warning:  #223-D: function "t_getfree" declared implicitly
+  	t_getfree("",fre_clust,&pfs) ;
+../Src/main.c(230): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			velocity[i] = (3.3*velocityadc[i])/4096 ;
-../Src/main.c(181): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(231): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			steering[i] =	(3.3*steeringadc[i])/4096 ;
-../Src/main.c(215): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(265): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c: 3 warnings, 0 errors
-compiling stm32f7xx_it.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_adc_ex.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_hal_adc.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_dac_ex.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_dac.c...
-compiling stm32f7xx_hal_spi_ex.c...
-compiling stm32f7xx_hal_eth.c...
-compiling stm32f7xx_hal_spi.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling system_stm32f7xx.c...
-compiling usbd_core.c...
-compiling usbd_ioreq.c...
-compiling usbd_ctlreq.c...
-compiling usbd_cdc.c...
-compiling diskio.c...
-compiling ccsbcs.c...
-compiling syscall.c...
-compiling ff_gen_drv.c...
-compiling ff.c...
-"ProjectCube\ProjectCube.axf" - 1 Error(s), 3 Warning(s).
+../Src/main.c: 6 warnings, 0 errors
+linking...
+ProjectCube\ProjectCube.axf: Error: L6218E: Undefined symbol t_getfree (referred from main.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 1 error messages.
+"ProjectCube\ProjectCube.axf" - 1 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -110,7 +70,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.3.0
 Target not created.
-Build Time Elapsed:  00:03:47
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
