--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -22,12 +22,54 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\Diplomarbeit\Hauptprogramm\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  11/13/2019
+Project File Date:  11/14/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 0 Warning(s).
+compiling usb_device.c...
+compiling usbd_desc.c...
+compiling stm32f7xx_it.c...
+compiling usbd_cdc_if.c...
+compiling usbd_conf.c...
+compiling stm32f7xx_hal_msp.c...
+compiling main.c...
+../Src/main.c(112): warning:  #177-D: variable "setval"  was declared but never referenced
+  	int setval = 0;
+../Src/main.c: 1 warning, 0 errors
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_hal_eth.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_adc_ex.c...
+compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_uart.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling system_stm32f7xx.c...
+compiling stm32f7xx_hal_exti.c...
+compiling usbd_core.c...
+compiling usbd_ioreq.c...
+compiling usbd_ctlreq.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling usbd_cdc.c...
+linking...
+Program Size: Code=20748 RO-data=560 RW-data=472 ZI-data=111424  
+FromELF: creating hex file...
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +92,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:02:57
 </pre>
 </body>
 </html>
