--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -26,57 +26,15 @@ Project File Date:  11/20/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\ARM\ARMCC\Bin'
-Rebuild target 'ProjectCube'
-compiling NumType_F4.c...
-assembling startup_stm32f767xx.s...
-compiling usbd_conf.c...
-compiling usb_device.c...
+Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(120): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(125): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
 ../Src/main.c: 1 warning, 0 errors
-compiling stm32f7xx_it.c...
-compiling usbd_desc.c...
-compiling usbd_cdc_if.c...
-compiling rangierFuzzy_F4.c...
-..\Src\rangierFuzzy_F4.c(223): warning:  #144-D: a value of type "const char *" cannot be used to initialize an entity of type "const signed char *"
-     rangierFuzzy_F4_RuleBase_pre,
-..\Src\rangierFuzzy_F4.c: 1 warning, 0 errors
-compiling fuzzy_F4.c...
-compiling system_stm32f7xx.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_exti.c...
-compiling stm32f7xx_hal_adc_ex.c...
-compiling stm32f7xx_hal_adc.c...
-compiling stm32f7xx_hal_eth.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling usbd_core.c...
-compiling usbd_ctlreq.c...
-compiling usbd_ioreq.c...
-compiling usbd_cdc.c...
 linking...
-Program Size: Code=20844 RO-data=560 RW-data=872 ZI-data=31424  
+Program Size: Code=20844 RO-data=560 RW-data=1088 ZI-data=31424  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -99,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:01:47
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
