--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,15 +28,17 @@ Project File Date:  11/19/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(180): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(182): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   		snprintf(velocityASCII,10000,"velocity:%d\n\r",velocity[memorytrans]) ;
-../Src/main.c(117): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(183): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		snprintf(steeringASCII,10000,"steering:%d\n\r",steering[memorytrans]) ;
+../Src/main.c(118): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=22932 RO-data=568 RW-data=472 ZI-data=61648  
+Program Size: Code=22980 RO-data=568 RW-data=472 ZI-data=71648  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
