--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -22,23 +22,49 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\Diplomarbeit\Hauptprogramm\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  11/26/2019
+Project File Date:  12/05/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
+assembling startup_stm32f767xx.s...
+compiling stm32f7xx_it.c...
+compiling usbd_cdc_if.c...
+compiling usb_device.c...
+compiling usbd_desc.c...
 compiling main.c...
-../Src/main.c(185): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(111): error:  #79: expected a type specifier
+  	HAL_GPIO_EXTI_IRQHandler(Counterrisingedge_Pin)	{
+../Src/main.c(111): error:  #260-D: explicit type is missing ("int" assumed)
+  	HAL_GPIO_EXTI_IRQHandler(Counterrisingedge_Pin)	{
+../Src/main.c(111): error:  #147: declaration is incompatible with "void HAL_GPIO_EXTI_IRQHandler(uint16_t)"  (declared at line 239 of "../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_gpio.h")
+  	HAL_GPIO_EXTI_IRQHandler(Counterrisingedge_Pin)	{
+../Src/main.c(111): error:  #141-D: unnamed prototyped parameters not allowed when body is present
+  	HAL_GPIO_EXTI_IRQHandler(Counterrisingedge_Pin)	{
+../Src/main.c(188): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   		snprintf(velocityASCII,10000,"velocity:%d\n\r",velocity[im]) ;
-../Src/main.c(186): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(189): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   		snprintf(steeringASCII,10000,"steering:%d\n\r",steering[im]) ;
-../Src/main.c(120): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(123): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
-../Src/main.c: 3 warnings, 0 errors
-linking...
-Program Size: Code=23012 RO-data=568 RW-data=484 ZI-data=71652  
-FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
+../Src/main.c: 3 warnings, 4 errors
+compiling stm32f7xx_hal_msp.c...
+compiling usbd_conf.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_eth.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_hal_adc_ex.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_uart.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_flash_ex.c...
 
 <h2>Software Packages used:</h2>
 
@@ -61,7 +87,8 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:04
+Project build/rebuild aborted.
+Build Time Elapsed:  00:01:50
 </pre>
 </body>
 </html>
